samples/_failures_safe/1760884716_8c59d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6784c25.c: In function ‘main’:
./samples/SAFE/__tmp_b6784c25.c:154:5: error: expected expression at end of input
  154 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_b6784c25.c:154:5: error: expected declaration or statement at end of input
